@startuml GraphPartitionGenerator

!include ../domain/IGraphPartitionGenerator.puml

class KernighanLinGraphPartitionGenerator {
    - partsCount: int
    - random: Random
    - cachedGains: Dictionary<IEdge, int>

    + KernighanLinGraphPartitionGenerator(partsCount: int)
}

class FiducciaMattheysesGraphPartitionGenerator {
    - iterationsCount: int
    - random: Random

    + FiducciaMattheysesGraphPartitionGenerator()
}

KernighanLinGraphPartitionGenerator ..|> IGraphPartitionGenerator
FiducciaMattheysesGraphPartitionGenerator ..|> IGraphPartitionGenerator

@enduml
